# FolioFlow

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
