[package]
name = "app"
version = "0.1.0"
description = "FolioFlow desktop image browser"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
base64 = "0.22"
dirs = "5"
dunce = "1"
image = "0.25"
ignore = "0.4"
kamadak-exif = "0.6"
log = "0.4"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.2" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"
